tests/baselines/reference/classExtendingPrimitive2.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts(3,19): error TS1133: Type reference expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts(4,19): error TS1133: Type reference expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts(4,24): error TS1005: ';' expected.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts (3 errors) ====
    // classes cannot extend primitives
    
    class C4a extends void {}
                      ~~~~
!!! error TS1133: Type reference expected.
    class C5a extends null { }
                      ~~~~
!!! error TS1133: Type reference expected.
                           ~
!!! error TS1005: ';' expected.